# DXHeroes_RP

./: README.md  work_load.txt
.github/workflows/: publish.yml
PythonSDK_offers/: .auth_token_cache.json  .env  Applifting Python task.html  README.md  config.py  config.yaml  main.py  openapi.json  pyproject.toml
PythonSDK_offers/.github/workflows/: publish.yml
PythonSDK_offers/Applifting Python task_files/: styles.css
PythonSDK_offers/examples/: automatic_sdk.py  main.py  retry_logic.py  sync_wrapper.py
PythonSDK_offers/hooks/: hooks.py
PythonSDK_offers/offers_cli_tool/: offers_cli.py
PythonSDK_offers/offers_sdk/: __init__.py  auth.py  client.py  exceptions.py  models.py
PythonSDK_offers/offers_sdk/http_clients/: aiohttp_client.py  base.py  httpx_client.py  requests_client.py  retry_client.py  sync_client.py
PythonSDK_offers/python-exercise-client/: README.md  pyproject.toml
PythonSDK_offers/tests/: conftest.py  test_auth.py  test_auth_e2e.py  test_auth_unit.py  test_client.py  test_client_e2e.py  test_client_unit.py  test_exceptions.py  test_exceptions_1.py  test_retry_client_unit.py
