[tool.poetry]
name = "python_offers_sdk"
version = "0.1.3"
description = "Async Python SDK for Offers API"
authors = ["Radek Pastyrik: radek.pastyrik@gmail.com"]
license = "MIT"
readme = "README.md"
packages = [{ include = "offers_sdk" }]
keywords = ["sdk", "async", "httpx", "offers"]

[tool.poetry.scripts]
offers = "offers_cli_tool.offers_cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"
pydantic = "^2.0"
python-dotenv = "^1.1.1"
tenacity = "^9.1.2"
click = "^8.2.1"
openapi-generator-cli = "^7.14.0"
requests = "^2.32.4"
aiohttp = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
respx = "^0.20"
ruff = "^0.4"
mypy = "^1.9"
python-exercise-client = { path = "./python-exercise-client", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
